vlib/v/checker/tests/defer_use_multi_return_value_with_index_out_of_bounds.vv
fn test() (string, string) {
	defer {
		println($res(2))
	}
	return 'test', 'test2'
}
